Fix layout 2 header collapsing when empty

--- a/src/styles/layouts/Layout_02.css
+++ b/src/styles/layouts/Layout_02.css
@@ -9,7 +9,7 @@
 .layout-02 .header{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding: 0 calc(var(--width) * .05);
     background-color: var(--main-dark);
     grid-area: header;
     gap: calc(var(--width) * .02);
@@ -23,6 +23,7 @@
     border-bottom-right-radius: calc(var(--width) * 1 / 6);
     padding: calc(var(--width) * .05);
     padding-bottom: calc(var(--width) * 1 / 6);
+    margin: 0 calc(var(--width) * -.05);
 }
 
 .layout-02 .name{
